--- a/assets/scss/main/_main.scss
+++ b/assets/scss/main/_main.scss
@@ -1,199 +1,44 @@
 @use "components" as components;
 @use "../variables" as variables;
 @use "../mixins" as mixins;
+@use "../main/main__panel/main__panel";
+@use "../main/main__cases/main__cases";
 
 .main {
     width: variables.$global-width;
     margin-top: variables.$global-margin;
     margin-inline: auto;
+}
+
+main.main {
     @include mixins.screen-respond(large-medium-screens) {
         width: auto;
+        margin-top: 10px;
+    }
+    @include mixins.screen-respond(medium-screens) {
+        width: auto;
+        margin-top: 10px;
     }
 }
 
 .section {
     width: variables.$global-width;
-    margin-top: 122px;
     background-color: white;
+}
+
+section.section {
     @include mixins.screen-respond(large-medium-screens) {
-        width: mixins.$medium-screen;
-        height: auto !important;
-        margin-inline: auto;
-    }
-}
-
-.section-company {
-    height: 621px;
-    
-}
-
-.section-company__h2 {
-    padding-top: 50px;
-    margin: auto;
-}
-
-.section-company__panel {
-    margin: auto;
-    padding-block: 30px;
-}
-
-.section-company__wrapper {
-    display: flex;
-    gap: 30px;
-    @include mixins.screen-respond(large-medium-screens) {
-        flex-direction: column column;
-        padding-bottom: 60px;
-    }
-}
-
-.workWayCompany {
-    @include mixins.screen-respond(large-medium-screens) {
-        display: flex;
-        flex-direction: column column;
-    }
-}
-
-.section-company__wrapper-text {
-    width: 352px;
-    height: 365px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-left: 164px;
-    @include mixins.screen-respond(large-medium-screens) {
-        margin: auto;
+        width: mixins.$medium-screen - 20px;
         height: auto;
-    }
-}
-
-.section-company__p {
-    display: list-item;
-    &::marker {
-        color: #2e9aff;
-    }
-    @extend %font-p;
-    color: black;
-}
-
-.section-company__p-container > .section-company__p {
-    color: black;
-}
-
-.section-way, .section-feedback {
-    height: 500px;
-    display: none;
-}
-
-.section-company__wrapper-video {
-    video {
-        width: 562px;
-    }
-    @include mixins.screen-respond(large-medium-screens) {
-        margin: auto;
-    }
-}
-
-.h2 {
-    width: 143px;
-    @extend %font-h2;
-}
-
-.panel {
-    display: flex;
-    justify-content: space-around;
-    width: 600px;
-}
-
-.section-cases {
-    height: 389px;
-    &__h2 {
         margin-inline: auto;
-        padding-top: 50px;
     }
-    &__wrapper {
-        display: flex;
-        width: 1150px;
+    @include mixins.screen-respond(medium-screens) {
+        width: 80%;
+        height: auto;
         margin-inline: auto;
-        flex-direction: row;
-        padding-top: 40px;
-        gap: 42px;
-        &-photo {
-            display: flex;
-            gap: 42px;
-        }
     }
 }
 
-// Разделы
 
-.workWayCompany {
-    @extend %font-p;
-    p {
-        color: #000;
-    }
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    img {
-        height: 200px;
-        margin-right: auto;
-    }
-    padding: 20px 60px 30px 60px;
-    
-}
-
-.label {
-    width: 80px;
-    height: 38px;
-    border-radius: 30px;
-    background-color: #59B293;
-    box-shadow: 3px 4px 5px rgba(1, 1, 1, 0.5);
-    padding-top: 6px;
-    padding-left: 16px;
-    font-size: 18px;
-}
-
-.step:nth-child(2) {
-    .label {
-        background-color: #ebce4a;
-    }
-}
-
-.step:nth-child(3) {
-    .label {
-        background-color: #458FDE;
-    }
-}
-
-.step:nth-child(4) {
-    .label {
-        background-color: #EF7F04;
-    }
-}
-
-.step {
-    display: flex;
-    flex-direction: column;
-    gap: 45px;
-    width: 240px;
-}
-
-.section-cases__photo {
-    transition: opacity 0.5s ease; /* Анимация прозрачности */
-    opacity: 1; /* По умолчанию слайды видны */
-  }
-  
-  .section-cases__photo.hidden {
-    opacity: 0; /* Слайд скрывается плавно */
-  }
-  
-  .section-cases__wrapper-photo {
-    position: relative; /* Для правильного позиционирования слайдов */
-  }
-  
-
-.section-cases__arrow {
-    cursor: pointer; /* Указатель мыши для стрелок */
-}
 
 
