--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -76,4 +76,10 @@ $background-color-footer: #2F2F51;
     @include mixins.screen-respond(medium-screens) {
         font-size: 14px;
     }
+    @include mixins.screen-respond(handhelds) {
+        font-size: 14px;
+    }
+    @include mixins.screen-respond(phones) {
+        font-size: 14px;
+    }
 }
